[gd_scene load_steps=5 format=3 uid="uid://dc6nmuhffrw6p"]

[ext_resource type="Texture2D" uid="uid://cj1kpmi7ujwvp" path="res://Assets/textures/ui/ScoreBox.png" id="1_5we7x"]
[ext_resource type="Script" path="res://Scenes/hud.gd" id="1_svpxf"]
[ext_resource type="Texture2D" uid="uid://cu41ja188wtk0" path="res://Assets/textures/ui/PauseBtn.png" id="2_vna7v"]

[sub_resource type="LabelSettings" id="LabelSettings_sycs2"]
font_size = 38
font_color = Color(0, 0, 0, 1)

[node name="HUD" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_svpxf")

[node name="TopBarBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 83.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.466667)

[node name="TopBar" type="Control" parent="TopBarBG"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 78.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="TopBarBG/TopBar"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -72.0
offset_right = 250.0
offset_bottom = -6.0
grow_vertical = 0
texture = ExtResource("1_5we7x")
expand_mode = 1
stretch_mode = 4

[node name="ScoreLabel" type="Label" parent="TopBarBG/TopBar"]
layout_mode = 0
offset_left = 30.0
offset_top = 17.0
offset_right = 227.0
offset_bottom = 71.0
text = "0"
label_settings = SubResource("LabelSettings_sycs2")
horizontal_alignment = 2
vertical_alignment = 1

[node name="PauseButton" type="TextureButton" parent="TopBarBG/TopBar"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.0
offset_top = -73.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("2_vna7v")
ignore_texture_size = true
stretch_mode = 4

[connection signal="pressed" from="TopBarBG/TopBar/PauseButton" to="." method="_on_pause_button_pressed"]
